<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.libbledemo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:enabled="false"
            android:onClick="startDiscovery"
            android:text="@string/button_initial" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_below="@id/scan_button"
            android:text="@string/clear_devices"
            android:onClick="clearLists" />

        <TextView
            android:id="@+id/title_connected_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/clear_button"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/big_font_size"
            android:text="@string/title_connected"/>

        <ListView
            android:id="@+id/connected_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_connected_devices"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/title_discovered_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/connected_list"
            android:layout_margin="@dimen/margin"
            android:text="@string/title_discovered"
            android:textSize="@dimen/big_font_size" />

        <ListView
            android:id="@+id/device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_discovered_devices"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/device_list"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/footer_info"/>

    </RelativeLayout>

</ScrollView>